# celery-clinic

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: app.yml
docker/: Dockerfile
src/homework/: celery.py  db.py  main.py  schemas.py  tasks.py
src/homework/static/: main.css  main.js
src/homework/templates/: base.html  index.html  records.html
tests/: test_app.py
