[tool.poetry]
name = "python-ab2-hw-async-integration-d0ggzi"
version = "0.1.0"
description = ""
authors = ["Maksim Laptev <maks-laptev.03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.3.6"
redis = "^5.0.3"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
pytest = "^8.1.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
